--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,6 @@
   <body>
     <div id="root"></div>
 
-    <script src="Index.js"></script>
+    <script src="/Index.js"></script>
   </body>
 </html>
